// Copyright (c) Mainflux
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package mainflux;

import "google/protobuf/empty.proto";

service ThingsService {
    rpc CanAccessByKey(AccessByKeyReq) returns (ThingID) {}
    rpc CanAccessByID(AccessByIDReq) returns (google.protobuf.Empty) {}
    rpc Identify(Token) returns (ThingID) {}
}

service AuthService {
    rpc Issue(IssueReq) returns (Token) {}
    rpc Identify(Token) returns (UserID) {}
}

message AccessByKeyReq {
    string token = 1;
    string chanID = 2;
}

message ThingID {
    string value = 1;
}

message AccessByIDReq {
    string thingID = 1;
    string chanID = 2;
}

message Token {
    string value = 1;
}

message UserID {
    string value = 1;
}

message IssueReq{
    string issuer = 2;
    uint32 type = 3;
}
